test/fail/duplicate_typdef.cll
typedef $A = { int a; };
typedef $A = { int b; };
0;
